# UN

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile.alpine  Dockerfile.cathedral  GlobalPeaceContract.sol  Makefile  Makefile_rio35  ZKCBDC.sol  append_cargo2.patch  build_arkhe.py  calibration_report_template.json  cathedral_arkhe_v16.2_zvec.py  cathedral_arkhe_v16.3_zvec_meta_rust.py  cathedral_ontology_v28.yaml  commit_files.py  create_crates.py  cross_domain_integration_guide.md  docker-compose.alpine.yml  docker-compose.prod.yml  fix_connectors.patch  fix_golden.patch  fix_golden_again2.patch  fix_golden_more.patch  fix_lean4.py  fix_owasp.patch  fix_rag.patch  fix_repo.py  foundry.sh  generate_1010.py  generate_1064.py  generate_v9.py  generate_v9_english.py  justfile  orchestra_config.json  patch_engine.py  patch_metalearning.py  patch_ppo.py  patch_swrl.py  patch_vit.py  (+12 more)
cathedral-agent/: Cargo.toml
cathedral-agent/src/: eve_client.rs  event_bus.rs  hashtree_adapter.rs  lib.rs  thread_index.rs  trace_manager.rs  version_manager.rs
cathedral-agent/src/cli/: desci_commands.rs  evolution_commands.rs  mod.rs  wallet_commands.rs
cathedral-agent/src/error_handling/: circuit_breaker.rs  mod.rs  retry.rs
cathedral-agent/src/event_bus/: redis_streams.rs
cathedral-agent/src/evolution/: cli.rs  desci_node_resource.rs  identity_resource.rs  lora_finetune.rs  mod.rs  pipeline.rs  registry.rs  resource.rs  secret_resource.rs  sepl.rs  sepl_desci.rs  sepl_wallet.rs  wallet_resource.rs
cathedral-agent/src/fastbrain/: mod.rs
cathedral-agent/src/integrations/: mod.rs  x402.rs
cathedral-agent/src/orchestrator/: consensus_workflow.rs
cathedral-agent/src/skill/: executor.rs  manager.rs  mod.rs  registry.rs  types.rs
cathedral-agent/src/swarm/: background_swarm.rs  mod.rs  orchestrator.rs  second_self.rs  types.rs
cathedral-agi-omega/: MAIN_ENTRYPOINT.py  README.md  pyproject.toml
cathedral-agi-omega/AUTO_RSI/: architecture_search.py  code_synthesis_agent.py  safe_extraction_pipeline.py
cathedral-agi-omega/CATHEDRAL_OS/: task_scheduler.py
cathedral-agi-omega/COGNITIVE_CORTEX/agents/: subordinate_llm.py
cathedral-agi-omega/GLOBAL_DISTRIBUTED_TRAINING/: fsdp_coordinator.py  mpc_gradient_aggregator.py
cathedral-agi-omega/HUMAN_INTERFACE/: governance_dashboard.py  threshold_mobile_app.py
cathedral-agi-omega/INFRASTRUCTURE/ci_cd/: github_actions_prove.yml  reject_unproven.py
cathedral-agi-omega/LEAN4_SUPEREGO/: CathedralAGI.lean
cathedral-agi-omega/MULTIMODAL_ENCODERS/: audio_handler.py  vision_to_ontology.py
cathedral-agi-omega/NEURO_SYMBOLIC_ENGINE/: episodic_memory.py  neuro_symbolic_bridge.py
cathedral-agi-omega/SOVEREIGN_ECONOMICS/: pouw_verifier.py  token_minter.py
cathedral-agi-omega/TOOL_USE_SANDBOX/: api_oblivious_transfer.py
cathedral-arkhe-substrato-8000/: Cargo.toml  docker-compose.alpine.yml  init-db.sql
cathedral-arkhe-substrato-8000/alerts/: mcp_alerts.yml
cathedral-arkhe-substrato-8000/config/: mcp.toml
cathedral-arkhe-substrato-8000/crates/cathedral-tensorzkp-bridge/: Cargo.toml
cathedral-arkhe-substrato-8000/crates/cathedral-zvec-bridge/: Cargo.toml
cathedral-arkhe-substrato-8000/crates/headroom-ffi/: Cargo.toml
cathedral-arkhe-substrato-8000/docs/: OPERATIONS-RUNBOOK.md
cathedral-arkhe-substrato-8000/grafana/dashboards/: cathedral-security-seal.json
cathedral-arkhe-substrato-8000/scripts/: alpine-start.sh  backup-cronjob.sh
cathedral-arkhe-substrato-8000/src/: lib.rs
cathedral-arkhe-substrato-8000/src/substrato_8000/: cross_agent_memory.rs  ema_integration.rs  mcp_headroom_server.rs  proxy_mode.rs
cathedral-arkhe-substrato-8000/src/substrato_9000/: immersion_driven_thinking.rs
cathedral-cse/: Cargo.toml
cathedral-cse/src/: lib.rs
cathedral-cse/src/agent/: cca_v2.rs  tokenizer.json
cathedral-cse/src/attention/: spatial.rs
cathedral-cse/src/moe/: orchestrator.rs
cathedral-cse/src/mtp/: predictor.rs
cathedral-cse/src/sahoo/: plus.rs
cathedral-cse/src/thinking/: engine.rs  mod.rs
cathedral-orchestrator/: Cargo.toml
cathedral-orchestrator/examples/: causal_geometry_demo.rs  deployment_simulation_demo.rs  testing_demo.rs
cathedral-orchestrator/src/: lib.rs  llm_api.rs
cathedral-orchestrator/src/agents/: llama_zip_agent.rs
cathedral-orchestrator/src/attestation/: manager.rs  mod.rs
cathedral-orchestrator/src/cache/: geometric_lae.rs  mod.rs  semantic_cache.rs
cathedral-orchestrator/src/cuda/: geometric_reward_model.rs  mod.rs
cathedral-orchestrator/src/geometry/: mod.rs  (+5 more)
cathedral-orchestrator/tests/: b20_integration_tests.rs  testing_agents_unit_tests.rs
cathedral-os/: .gitignore  Cargo.toml  Makefile  README.md  package.json
cathedral-os/emulation/: run_qemu_linux.sh  run_qemu_windows.sh
cathedral-os/scripts/: deploy.sh
cathedral-prometheus-bridge/cathedral-bridge/: Cargo.toml
cathedral-prometheus-bridge/cathedral-sdk-rs/: Cargo.toml
cathedral-royalties/: Cargo.toml  README.md
cathedral-royalties/src/: lib.rs
cathedral-royalties/tests/: unit_tests.rs
cathedral_arkhe_crawler/: Cargo.toml  README.md
cathedral_arkhe_crawler/examples/: crawler_demo.rs
cathedral_arkhe_crawler/src/: lib.rs
crates/arkhe-governance/: Cargo.toml
crates/cathedral-agents/: Cargo.toml
crates/cathedral-arkheobex/: Cargo.toml
crates/cathedral-cli/: Cargo.toml
crates/cathedral-identity/: Cargo.toml
crates/cathedral-llm-core/: Cargo.toml
crates/cathedral-multichain/: Cargo.toml
crates/cathedral-napi/: Cargo.toml
crates/cathedral-remix-bridge/: Cargo.toml
crates/cathedral-self-improve/: Cargo.toml
crates/cathedral-server/: Cargo.toml
crates/cathedral-wormgraph/: Cargo.toml
crates/safe-core-bridge/: Cargo.toml
crates/safe-core-governance/: Cargo.toml
crates/safe-core-model-runtime/: Cargo.toml
crates/safe-core-persistence/: Cargo.toml
crates/safe-core-reactive-governance/: Cargo.toml
orchestrator/: Cargo.toml
orchestrator/src/: lib.rs
substrato-7001/: Cargo.toml
substrato-7001/src/: main.rs  metrics_exporter.rs
substrato-7001/tests/: polar_integration.rs
(+959 files in other folders)
