[workspace]
members = [
    "crates/cathedral-core",
    "crates/cathedral-bridge",
    "crates/cathedral-sdk",
    "crates/cathedral-zk-risc0",
    "crates/cathedral-zk-circuits",
    "crates/cathedral-wormgraph",
    "crates/cathedral-nostr",
    "crates/cathedral-observer-5d",
    "crates/cathedral-cem",
    "crates/cathedral-shard-controller",
    "crates/cathedral-atlassian",
    "crates/cathedral-sail-pipeline",
    "crates/cathedral-xtask",
    "crates/cathedral-test-utils",
    "crates/cathedral-hashtree",
    "crates/cathedral-kernel-zk",
    "crates/cathedral-x402-gateway",
    "crates/cathedral-ethical-certification",
    "crates/cathedral-contextual-amplification",
    "crates/cathedral-plurality",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Cathedral ARKHE Architects <architect@arkhe.network>"]
license = "Apache-2.0"
repository = "https://github.com/cathedral-arkhe/cathedral-arkhe"
rust-version = "1.91"

[workspace.dependencies]
# Ferramentas de desenvolvimento (globais)
cargo-insta = "1.40"
cargo-llvm-cov = "0.5"
cargo-deadlinks = "0.9"
cargo-sbom = "0.4"

# Para o xtask
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
which = "6.0"
anyhow = "1.0"
