[workspace]
members = [
    "crates/cathedral-llm-core",
    "crates/cathedral-inference-runtime",
    "crates/cathedral-identity",
    "crates/cathedral-reputation",
    "crates/cathedral-wormgraph",
    "crates/cathedral-zk",
    "crates/cathedral-arkheobex",
    "crates/cathedral-observer",
    "crates/cathedral-api",
    "crates/cathedral-cli",
    "crates/cathedral-benchmarks",
    "crates/cathedral-tests",
    "crates/cathedral-remix-bridge",
    "crates/cathedral-server",
    "crates/cathedral-harness",
    "crates/cathedral-orchestration",
    "crates/cathedral-tools",
    "crates/cathedral-permissions",
    "crates/cathedral-self-improve",
    "crates/cathedral-agents",
    "crates/cathedral-skills",
    "crates/arkhe-core",
    "crates/arkhe-forge",
    "crates/arkhe-agents",
    "crates/arkhe-llm",
    "crates/arkhe-metacognition",
    "crates/arkhe-bridge",
    "crates/arkhe-security-audit",
    "crates/arkhe-kernel",
    "crates/arkhe-parsing",
    "crates/arkhe-governance",
    "crates/arkhe-nexus-governance"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Cathedral ARKHE ORCHESTRATOR <orcid:0009-0005-2697-4668>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cathedral-os/cathedral-llm"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "tracing"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# HTTP/gRPC
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = "0.6"
tonic = "0.12"
hyper = "1.6"

# WebSocket
tokio-tungstenite = "0.26"

# Database / Cache
dashmap = "6.1"
redis = { version = "0.28", features = ["tokio-comp"] }

# Cryptography (PQC)
ml-dsa = "0.1"
ml-kem = "0.1"
slh-dsa = "0.1"
ed25519-dalek = "2.1"
sha3 = "0.10"
blake3 = "1.5"

# ZK Proofs
risc0-zkvm = "1.1"
risc0-build = "1.1"

# Metrics / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
opentelemetry = "0.28"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Testing
tokio-test = "0.4"
mockall = "0.13"
criterion = { version = "0.5", features = ["async_tokio"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# Utilities
uuid = { version = "1.14", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
once_cell = "1.20"
hex = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
rand = "0.8"

# LLM / ML (placeholder)
candle-core = "0.7"
candle-nn = "0.7"
candle-transformers = "0.7"
llama-cpp-2 = "0.1.150"

[workspace.metadata.cathedral]
model-tiers = ["pro", "plus", "standard", "lite"]
verification-levels = ["none", "light", "standard", "full"]
default-verification = "light"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true

[workspace.dependencies.arkhe-core]
path = "crates/arkhe-core"

[workspace.dependencies.arkhe-agents]
path = "crates/arkhe-agents"

[workspace.dependencies.arkhe-llm]
path = "crates/arkhe-llm"

[workspace.dependencies.arkhe-metacognition]
path = "crates/arkhe-metacognition"

[workspace.dependencies.arkhe-bridge]
path = "crates/arkhe-bridge"

[workspace.dependencies.arkhe-forge]
path = "crates/arkhe-forge"

[workspace.dependencies.arkhe-kernel]
path = "crates/arkhe-kernel"
