[package]
name = "cathedral-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
reqwest = { version = "0.13.4", features = ["json"] }
uuid = { version = "1.23.3", features = ["v4"] }
clap = { version = "4.6.1", features = ["derive"] }
