[package]
name = "cathedral-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
tracing = "0.1"
futures = "0.3"
axum = "0.7"
bytes = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0.102"
base64 = "0.22.1"
