[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cathedral-agi-omega"
version = "0.1.0"
description = "Cathedral AGI Omega - Formal Verification, Crypto Agility, ZK Reasoning"
authors = ["Cathedral AGI Research <info@cathedral.agi>"]

[tool.poetry.dependencies]
python = "^3.9"
blst-py = "^0.0.0"
substrate-interface = "^1.7.0"
py_ecc = "^6.0.0"
web3 = "^6.0.0"
neo4j = "^5.0.0"
torch = "^2.0.0"
ezkl = "^0.0.0"
pytest = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
