[package]
name = "cathedral-arkhe-substrato-8000"
version = "1.0.0"
edition = "2021"
authors = ["Cathedral ARKHE <architect@cathedral-arkhe.org>"]
description = "Headroom Bridge — Context Compression Layer for Cathedral ARKHE"
license = "Apache-2.0"
repository = "https://github.com/cathedral-arkhe/substrato-8000"
keywords = ["llm", "compression", "context", "mcp", "agent"]
categories = ["network-programming", "compression"]
rust-version = "1.75"

[workspace]
members = [
    ".",
    "crates/cathedral-zvec-bridge",
    "crates/cathedral-tensorzkp-bridge",
    "crates/headroom-ffi",
]

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# HTTP server & client
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "decompression-full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9"
toml = "0.8"

# Time & date
chrono = { version = "0.4", features = ["serde"] }

# Tracing & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = { version = "0.8", features = ["std_rng"] }
base64 = "0.22"

# Metrics & monitoring
prometheus = { version = "0.13", features = ["process"], optional = true }
prometheus-static-metric = "0.5"
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", optional = true }

# Compression
flate2 = { version = "1.0", features = ["zlib-ng"] }
brotli = "6.0"
zstd = { version = "0.13", features = ["zstdmt"] }
lz4 = "1.24"

# Data structures
dashmap = "6.0"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
once_cell = "1.19"
lazy_static = "1.4"
regex = "1.10"
url = "2.5"
percent-encoding = "2.3"

# Async traits
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# HTTP body handling
http-body = "1.0"
http-body-util = "0.1"
bytes = "1.5"

# Python FFI (for Headroom integration)
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"], optional = true }

# gRPC (for zVEC bridge)
tonic = { version = "0.11", features = ["tls", "prost"], optional = true }
prost = { version = "0.12", optional = true }

# WebSocket
async-tungstenite = { version = "0.24", features = ["tokio-runtime", "tokio-native-tls"], optional = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"], optional = true }

# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"], optional = true }

# Config
config = { version = "0.14", features = ["toml", "yaml", "json"] }

# Rate limiting
governor = { version = "0.6", features = ["std", "jitter"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# OpenAPI / API docs
utoipa = { version = "4.2", features = ["axum_extras"], optional = true }

# Testing
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.1"

# Cathedral internal dependencies (path-based during development)
[dependencies.cathedral-zvec-bridge]
path = "crates/cathedral-zvec-bridge"
optional = true

[dependencies.cathedral-tensorzkp-bridge]
path = "crates/cathedral-tensorzkp-bridge"
optional = true

[dependencies.headroom-ffi]
path = "crates/headroom-ffi"
optional = true

[features]
default = ["mcp-server", "proxy-mode", "ema", "metrics", "cache-aligner"]
full = ["mcp-server", "proxy-mode", "ema", "metrics", "cache-aligner", "zvec-bridge", "tensorzkp-bridge", "python-ffi", "grpc", "websocket", "cli", "openui"]

# Core features
mcp-server = []
proxy-mode = []
ema = []
metrics = ["prometheus", "metrics-exporter-prometheus"]
cache-aligner = []
cross-agent-memory = []

# Integration bridges
zvec-bridge = ["dep:cathedral-zvec-bridge", "tonic", "prost"]
tensorzkp-bridge = ["dep:cathedral-tensorzkp-bridge"]
python-ffi = ["dep:pyo3", "headroom-ffi"]

# Protocol features
grpc = ["tonic", "prost"]
websocket = ["async-tungstenite", "tokio-tungstenite"]

# Tooling
cli = ["clap"]
openui = ["utoipa"]

# Test features
test-integration = []
test-e2e = ["test-integration"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true

[[bin]]
name = "cathedral-headroom-mcp"
path = "src/bin/mcp_server.rs"
required-features = ["mcp-server", "cli"]

[[bin]]
name = "cathedral-headroom-proxy"
path = "src/bin/proxy_server.rs"
required-features = ["proxy-mode", "cli"]

[[bin]]
name = "cathedral-headroom-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[lib]
name = "cathedral_arkhe_headroom"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
