[package]
name = "cathedral-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde = "1.0.228"
serde_json = "1.0.150"
reqwest = "0.13.4"
qdrant-client = "1.18.0"
uuid = "1.23.3"
tracing = "0.1.44"
seahash = "4.1.0"
arcode = "0.2.4"
