[package]
name = "cathedral-arkhe-crawler"
version = "30.3.0"
edition = "2021"
description = "Sovereign Crawler Agent for Cathedral ARKHE"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
bincode = "1.3"
hex = "0.4"
thiserror = "1.0"
serde-big-array = "0.5.1"
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
