[package]
name = "cathedral-x402-polar"
version = "2.0.0"
edition = "2021"
description = "Substrato 7001 — x402 Payment Layer com integração Polar"
license = "Apache-2.0"
rust-version = "1.85"

[features]
default = ["mcp-server", "webhooks", "oss", "metrics-export"]
mcp-server = ["tokio", "serde_json", "tracing"]
webhooks = ["axum", "tower-http", "hmac", "sha2", "hex"]
oss = ["chrono"]
metrics-export = ["metrics", "metrics-exporter-prometheus"]
cli = ["clap"]
full = ["mcp-server", "webhooks", "oss", "metrics-export", "cli"]

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"], optional = true }

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "json", "rustls-tls"
] }
axum = { version = "0.8", features = ["macros"], optional = true }
tower-http = { version = "0.6", features = ["trace", "cors"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

# Crypto (webhook signature verification)
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

# Metrics
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }

# Time
chrono = { version = "0.4", features = ["serde"], optional = true }

# Logging
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"], optional = true }

# Retry
tokio-retry = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
assert-json-diff = "2.0"

[[bin]]
name = "cathedral-polar-mcp"
path = "src/mcp_polar_stdio.rs"
required-features = ["mcp-server"]

[[bin]]
name = "cathedral-x402-server"
path = "src/main.rs"
required-features = ["webhooks", "oss", "metrics-export"]
