[package]
name = "cathedral-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23.3", features = ["v4"] }
common = { path = "../../common" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
tonic-build = "0.12"

[[bench]]
name = "pqc_benchmarks"
harness = false
path = "../benches/pqc_benchmarks.rs"
