[package]
name = "arkhe-governance"
version = "2.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
hex = "0.4"
thiserror = "1.0"
tokio = { version = "1.43", features = ["full"] }

[lib]
name = "arkhe_governance"
path = "src/lib.rs"
