[package]
name = "cathedral-agents"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
chrono = "0.4"
cathedral-identity = { path = "../cathedral-identity" }
cathedral-wormgraph = { path = "../cathedral-wormgraph" }
cathedral-zk = { path = "../cathedral-zk" }
cathedral-permissions = { path = "../cathedral-permissions" }
