[package]
name = "cathedral-arkheobex"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cathedral-reputation = { path = "../cathedral-reputation" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
bincode.workspace = true
async-trait.workspace = true
