[package]
name = "cathedral-identity"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cathedral-arkheobex = { path = "../cathedral-arkheobex" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha3.workspace = true
hex.workspace = true
bincode.workspace = true
async-trait.workspace = true
dashmap.workspace = true
rand_core = { version = "0.6", features = ["std"] }
