[package]
name = "cathedral-multichain"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.30"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
base64 = "0.22"
tracing = "0.1.44"
