[package]
name = "cathedral-napi"
version = "0.1.0"
edition = "2021"

[dependencies]
napi = { version = "2", features = ["napi9", "async"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cathedral-embodied-no-std = { path = "../cathedral-embodied-no_std" }

[lib]
crate-type = ["cdylib"]
