[package]
name = "cathedral-remix-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.14", features = ["v4"] }
chrono = "0.4"
