[package]
name = "cathedral-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Cathedral crates
cathedral-core = { path = "../cathedral-core" }
cathedral-identity = { path = "../cathedral-identity" }
cathedral-wormgraph = { path = "../cathedral-wormgraph" }
cathedral-zk = { path = "../cathedral-zk" }
cathedral-remix-bridge = { path = "../cathedral-remix-bridge" }

# Web framework
axum = { version = "0.8", features = ["json", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Autenticação
hex = "0.4"

# Persistência
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }

# Utilitários
anyhow = "1.0"
thiserror = "2.0"
chrono = "0.4"
uuid = { version = "1.14", features = ["v4"] }
