[package]
name = "safe-core-bridge"
version.workspace = true
edition.workspace = true
description = "Integration API — Ethics, Monitoring, Invariants via HTTP + MCP"

[features]
default = []
mcp = ["dep:rmcp"]

[dependencies]
safe-core-types = { path = "../safe-core-types" }
safe-core-ethics = { path = "../safe-core-ethics" }
safe-core-lean4 = { path = "../safe-core-lean4" }

axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Optional: MCP integration via rmcp 2.0.0
# Compile with: cargo build -p safe-core-bridge --features mcp
rmcp = { version = "2.0", optional = true }
clap = { version = "4.5", features = ["derive", "env"] }

anyhow = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
