[package]
name = "safe-core-governance"
version = "1.0.0"
edition = "2021"
description = "Governança para Agentes Autônomos"

[dependencies]
safe-core-ethics = { path = "../safe-core-ethics" }
safe-core-persistence = { path = "../safe-core-persistence" }
safe-core-verifier = { path = "../safe-core-verifier" }
safe-core-audit = { path = "../safe-core-audit" }

rmcp = { path = "../rmcp", features = ["server", "macros", "transport-stdio"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.14", features = ["v4"] }
hex = "0.4"
chrono = "0.4"

[features]
default = ["stdio"]
stdio = ["rmcp/transport-stdio"]
http = ["rmcp/transport-http"]
