[package]
name = "safe-core-model-runtime"
version.workspace = true
edition.workspace = true
description = "Unified model runtime (PyTorch, Candle, Parallax) with Convenção X"
[dependencies]
arkhe-core = { workspace = true }
safe-core-parallax-bridge = { path = "../safe-core-parallax-bridge" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
