[package]
name = "safe-core-persistence"
version = "1.0.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
safe-core-ethics = { path = "../safe-core-ethics" }
